--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pandas = "^2.2.2"
+gdown = "^5.1.0"
+duckdb = "^0.10.2"
+streamlit = "^1.34.0"
+psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.30"
+psycopg2 = "^2.9.9"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
